bakkie_derive/tests/ui/fail/tool_malformed_syntax.stderr
error: expected `=`
 --> tests/ui/fail/tool_malformed_syntax.rs:3:1
  |
3 | #[tool(name = "test", description)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `tool` (in Nightly builds, run with -Z macro-backtrace for more info)
